# scraper

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py  models.py
app/pipelines/: retrieval_augmented.py
app/services/: brave_search.py  llm_runtime.py  scraper.py  summarizer.py
scripts/: download_model.py
tests/: test_api.py  test_scraper.py
